--- a/Group_03_Analysis_13March.Rmd
+++ b/Group_03_Analysis_13March.Rmd
@@ -8,10 +8,10 @@ output:
 fig_caption: yes
 ---
 
-
 ```{r setup, include=FALSE, eval = TRUE}
 knitr::opts_chunk$set(echo = FALSE, eval = TRUE, warning=FALSE, message=FALSE)
 ```
+
 
 ```{r,echo = TRUE,message=FALSE}
 library(dplyr)
@@ -29,9 +29,12 @@ library(janitor)
 ```
 
 # Introduction
-In this analysis, we are going to analysis which variables have influence on the member numbers of households in the region of **Northern Mindanao** in Philippines.
 
-Since the response variable is a count data, not continuous any more. It is suitable to fit a GLM model, particularly a Poisson model.
+The number of household members is one of the properties of household structure.Household unit is composed of family units. 
+Sharma (2013) regarded the family as a functional unit of society. It functions in an economic, social or emotional sense.Hence, the structure of it and those influential factors behind it are of much importance. 
+
+(Sharma R. (2013). The Family and Family Structure Classification Redefined for the Current Times. Journal of family medicine and primary care, 2(4), 306–310. https://doi.org/10.4103/2249-4863.123774)
+
 
 # Exploratory analysis
 
@@ -57,6 +60,42 @@ head(household) %>%
   kable_styling(latex_options = 'HOLD_position')
 
 ```
+First, we look at the proportion of each no. of households.
+
+```{r, fig.width = 6, fig.height = 4, fig.align = "center", fig.pos = "H"}
+household <- household %>% 
+  mutate(Members.group = as.character(Members.no))
+household[household$Members.no == 1, "Members.group"] = c("1 person")
+household[household$Members.no == 2, "Members.group"] = c("2 people") 
+household[household$Members.no == 3, "Members.group"] = c("3 people") 
+household[household$Members.no == 4, "Members.group"] = c("4 people") 
+household[household$Members.no == 5, "Members.group"] = c("5 people") 
+household[household$Members.no == 6, "Members.group"] = c("6 people") 
+household[household$Members.no >= 7 & household$Members.no <=16, "Members.group"] = c("7 or more people") 
+
+prop.y.group <- household %>%
+  group_by(Members.group) %>%
+  count()%>%
+  mutate(prop = round(n / nrow(household), 2))
+prop.y.group
+
+ggplot(prop.y.group, aes(x = "", y = n, fill=Members.group)) +
+         # Create a bar first
+         geom_bar(width = 1, stat = "identity") +
+          
+         # Then do pie chart
+         coord_polar("y", start=0) +
+         # Use color palettes from RColorBrewer package
+         scale_fill_brewer(palette="Dark2") +
+         # Blank the axis text and labs
+         theme(axis.text.x=element_blank()) +
+         labs(x="", y="", title="Percentage of households by household size")
+
+```
+
+Assume the data had been random sampled, we can get a proportion of 49% of the households contained 5 or more people in this region of Philippine. 
+
+
 
 ```{r, fig.width = 6, fig.height = 4, fig.align = "center", fig.pos = "H"}
 # summary of response varibale
@@ -76,89 +115,54 @@ median.no <- quantile(household$Members.no, probs = c(0.5));median.no
 
 # Binary classification
 points1 <- c(1, 4, 16)
-# Multiclass classification (n = 4)
-points2 <- c(1, 4, 8, 12, 16)
 
 household$quantiles <- cut(household$Members.no, breaks = points1,
                            include.lowest = TRUE, labels = c("1-4", "5-16"))
 # household$quantiles <- cut(household$Members.no, breaks = points2,
 #                           include.lowest = TRUE, labels = c("1-4","5-8","9-12","13-16"))
 
-household %>% 
+prop.y.group <- household %>%
   group_by(quantiles) %>%
-  summarize(n=n())
+  count()
+  
+ggplot(prop.y.group, aes(x = "", y = n, fill=quantiles)) +
+         # Create a bar first
+         geom_bar(width = 1, stat = "identity") +
+         # Then do pie chart
+         coord_polar("y", start=0) +
+         # Use color palettes from RColorBrewer package
+         scale_fill_brewer(palette="Dark2") +
+         # Blank the axis text and labs
+         theme(axis.text.x=element_blank()) +
+         labs(x="", y="", title="Percentage of households by household size")
 
 ```
 
 
-## Check our categorical variables with Y
-### Check Head.sex vs. Member.no
+
+## Skim of xs
 
 ```{r,}
-# Code from lab9
-# use the janitor package to summarise this data in a table format:
-household %>% 
-  tabyl(Head.sex, quantiles) %>% 
-  adorn_percentages() %>% 
-  adorn_pct_formatting() %>% 
-  adorn_ns() # To show original counts
+household <- household %>%
+  mutate(Income.kPHP = Income/1000, Food.exp.kPHP= Food.exp/1000)
 
-p1 <- ggplot(household, aes(x= as.factor(quantiles),  y = ..prop.., group=Head.sex, fill=Head.sex)) + 
-    geom_bar(position="dodge", stat="count") +
-    labs(y = "Proportion",x = "", main = "Barplot of Members.no by Head.sex")
-p1
+group.vars <- c("Elec.", "Type", "Head.sex")
+num.vars <- c("Income.kPHP", "Food.exp.kPHP", "Area", "House.age", "Bedrooms.no", "Head.age")
+# Code from DAS example sourcecode
+func_my_skim <- skim_with()
+func_my_skim(household[,num.vars])  %>%
+  dplyr::select(-skim_type) %>%
+  kable(col.names = c("Variable", "Missing", "Complete", "Mean", "SD", "Min.", "1st Q.", "Median",
+                        "3rd Q.", "Max.", "Hist"),
+        caption = '\\label{tab:summary} Summary statistics on teaching and beauty scores.',
+        booktabs = TRUE, digits = 2) %>%
+  kable_styling(font_size = 10, latex_options = "hold_position")
+
 ```
+The economic numeric variables contain much variability. Considering the property of linear model, a log-transformation is suitable for those economic covariates.
 
-```{r,}
-# Check Type
-household %>% 
-  tabyl(Type, quantiles) %>% 
-  adorn_percentages() %>% 
-  adorn_pct_formatting() %>% 
-  adorn_ns() # To show original counts
+### Check Y vs. numeric variables
 
-p2 <- ggplot(household, aes(x= as.factor(quantiles),  y = ..prop.., group=Type, fill=Type)) + 
-    geom_bar(position="dodge", stat="count") +
-    labs(y = "Proportion",x = "", main = "Barplot of Members.no by type")
-p2
-```
-
-```{r,}
-# Check Electricity
-household %>% 
-  tabyl(Elec., quantiles) %>% 
-  adorn_percentages() %>% 
-  adorn_pct_formatting() %>% 
-  adorn_ns() # To show original counts
-
-p3 <- ggplot(household, aes(x= as.factor(quantiles),  y = ..prop.., 
-                            group=as.factor(Elec.), fill=as.factor(Elec.))) + 
-    geom_bar(position="dodge", stat="count") +
-    labs(y = "Proportion",x = "", main = "Barplot of Members.no by electricity")
-p3
-```
-
-
-Short conclusion:
-
-- For *Head.sex*, a large proportion in *1-4*-member family are female (67.8% vs 32.2%), while in *5-16* more families are with male heads (53.7% vs 46.3%)
-- For *Type*, ...
-- For *Electricity*, ...
-(... need to be done)
-
-
-## Check the relationships between numerical variables
-
-### We first check correlations betwwen Xs
-```{r, eval = TRUE, out.width = '75%', fig.align = "center", fig.cap = "\\label{fig:cor} Correlations of all variables.", fig.pos = "H"}
-library(GGally)
-
-ggpairs(household[,c("Members.no", "Income", "Food.exp", "Head.age", "Area", "House.age", "Bedrooms.no")]) 
-```
-We notice a high cor between *Income* and *Food.exp*. (0.792)
-
-
-### Check Y vs. Xs one by one
 ```{r, }
 ## Why we use log-transform
 
@@ -179,95 +183,103 @@ p1.log <-ggplot(data = household, aes(x = as.factor(quantiles), y = log(Income),
 p1; p1.log
 ```
 
+
 We applied log-transform for *Income*, to stable the variability.
-Similarly, we did to *Food.exp*, *Area* and *House.age*
+Similarly, we did to *Food.exp*, *Area*
 
 
-```{r, fig.width = 9, fig.height = 12, fig.align = "center", fig.pos = "H"}}
+```{r, fig.width = 9, fig.height = 6, fig.align = "center", fig.pos = "H"}
 library(gridExtra)
 
 # Plotting with numerical variables
 # Income, Food.exp, head.age
 # ------------------ Income------------------------- #
-p1.log <-ggplot(data = household, aes(x = as.factor(quantiles), y = log(Income), fill = as.factor(quantiles))) +
+p1 <-ggplot(data = household, aes(x = as.factor(quantiles), y = log(Income), fill = as.factor(quantiles))) +
     geom_boxplot() +
     labs(x = "", y = "Log Income")+ 
+    geom_hline(yintercept = median(log(household$Income)),
+                              linetype = "dashed") +
     theme(legend.position = "none") +
     labs(title = "Members number by log income")
 
 # ------------------ Food.exp ------------------------- #
-p2.log <- ggplot(data = household, aes(x = as.factor(quantiles), y = log(Food.exp), fill = as.factor(quantiles))) +
+p2 <- ggplot(data = household, aes(x = as.factor(quantiles), y = log(Food.exp), fill = as.factor(quantiles))) +
     geom_boxplot() +
     labs(x = "", y = "Log food.exp")+ 
+    geom_hline(yintercept = median(log(household$Food.exp)),
+                              linetype = "dashed") +
     theme(legend.position = "none") +
     labs(title = "Members number by log food.exp")
 
 
+grid.arrange(p1, p2,  ncol = 2)
+```
+The larger size households tend to earn more income and spend more on food expenditure.
+
+In food expenditure, the difference gap is wider, since the 25% percentile of larger households’ spending nearly reach the 75% percentile of the smaller ones.
+
+
+
+```{r, fig.width = 9, fig.height = 9, fig.align = "center", fig.pos = "H"}
+library(gridExtra)
+
+# ------------------ House.age ------------------------- #
+p3 <- ggplot(data = household, aes(x = as.factor(quantiles), y = House.age, fill = as.factor(quantiles))) +
+    geom_boxplot() +
+    labs(x = "", y = "house.age")+ 
+    theme(legend.position = "none") +
+    geom_hline(yintercept = median(household$House.age), 
+               linetype = "dashed") +
+    labs(title = "Members number by house age")
+
 # ------------------ Head.age ------------------------- #
-p3 <- ggplot(data = household, aes(x = as.factor(quantiles), y = Head.age, fill = as.factor(quantiles))) +
+p4 <- ggplot(data = household, aes(x = as.factor(quantiles), y = Head.age, fill = as.factor(quantiles))) +
     geom_boxplot() +
     labs(x = "", y = "Head.age")+ 
     # Add a mean age line
-    geom_hline(yintercept = mean(household$Head.age), 
+    geom_hline(yintercept = median(household$Head.age), 
                linetype = "dashed") +
     theme(legend.position = "none") +
     labs(title = "Members number by head age")
 
-grid.arrange(p1.log, p2.log, p3,  ncol = 3)
-```
-
-```{r, fig.width = 12, fig.height = 12, fig.align = "center", fig.pos = "H"}}
-library(gridExtra)
-
-# Plotting with continuous variables
-# Area, House.age, Bedrooms.no
-# ------------------ Area ------------------------- #
-p1.log <-ggplot(data = household, aes(x = as.factor(quantiles), y = log(Area), fill = as.factor(quantiles))) +
-    geom_boxplot() +
-    labs(x = "", y = "Log Area")+ 
-    theme(legend.position = "none") +
-    labs(title = "Members number by log area")
-# ------------------ House.age ------------------------- #
-p2.log <- ggplot(data = household, aes(x = as.factor(quantiles), y = log(House.age), fill = as.factor(quantiles))) +
-    geom_boxplot() +
-    labs(x = "", y = "Log house.age")+ 
-    theme(legend.position = "none") +
-    labs(title = "Members number by log house age")
-
 # ------------------ Bedrooms.no ------------------------- #
-p3 <- ggplot(data = household, aes(x = as.factor(quantiles), y = Bedrooms.no, fill = as.factor(quantiles))) +
+p5 <- ggplot(data = household, aes(x = as.factor(quantiles), y = Bedrooms.no, fill = as.factor(quantiles))) +
     geom_boxplot() +
     labs(x = "", y = "Bedrooms.no")+ 
     theme(legend.position = "none") +
     labs(title = "Members number by bedroom number")
 
-grid.arrange(p1.log, p2.log, p3,  ncol = 3)
+# ------------------ Area ------------------------- #
+p6.log <-ggplot(data = household, aes(x = as.factor(quantiles), y = log(Area), fill = as.factor(quantiles))) +
+    geom_boxplot() +
+    labs(x = "", y = "Log Area")+ 
+    theme(legend.position = "none") +
+    labs(title = "Members number by log area")
+
+# p3, p4 are significantly different
+# While other two are not
+grid.arrange(p3, p4, p5, p6.log, ncol = 2)
 
 ```
 
 Short conclusion:
 
-- For *income*, ...
-- For *food.exp*, ...
-- For *head age*, ...
-- For *house age*, ...
-- For *area* and *bedrooms number*,  there is no significantly difference.
-(... need to be done)
+Similarly, we checked other numeric variables, and two of them (house bedroom number and floor area) are found not significantly different between the two groups.
 
+And the slight difference in the house age and head age may raise concern. We should check whether it is a significant predictor of the odds of a household being small or large size.
 
-# Correlation of all
+## Visualization of correlation
 
 ```{r,  fig.width = 9, fig.height = 6, fig.align = "center", fig.pos = "H"}
 
 
 household <- mutate(household, 
                     Income.log = log(Income),
-                    Food.exp.log = log(Food.exp),
-                    House.age.log = log(House.age))
+                    Food.exp.log = log(Food.exp))
 
 #Corrplot
 household %>%
-    select(Members.no, Income.log, Food.exp.log, Head.age, House.age.log) %>%
+    select(Members.no, Income.log, Food.exp.log, Head.age, House.age) %>%
     cor() %>%
     # Code reference:
     # http://www.sthda.com/english/wiki/visualize-correlation-matrix-using-correlogram
@@ -275,26 +287,110 @@ household %>%
              addCoef.col = "black", # Add coefficient of correlation
              tl.col="black", tl.srt=45, #Text label color and rotation
              diag=FALSE) # hide correlation coefficient on the principal diagonal
+```
+There are high correlations between annual income and annual food expenditure.
+
+The economic issues are among the top points in the government concerning. Find out the method to include these two core economic influences!
+
+## Income groups
+
+```{r, fig.width = 8, fig.height = 6, fig.align = "center", fig.pos = "H"}
+library(gridExtra)
+
+prop.points <- quantile(log(household$Income), probs=c(0, 0.25, 0.5, 0.75, 1.0))
+# Back the log transfrom
+income.points <- exp(prop.points);income.points
+##      0%        25%        50%        75%       100% 
+##  16238.00   85544.49  131806.00  249175.42 2598050.00 
+
+household <- household %>%
+  # Add Income groups
+  mutate(income.groups = cut(Income/1000, breaks=c(0, 132, 249, 1e10),labels=c("< 132 thousand PHP", "132 - 249", "249 and more")))
+
+p2 <-  ggplot(household, aes(x = log(Food.exp), y = Members.no)) +
+    geom_point(aes(color = income.groups , fill = income.groups ), size=2, alpha = 0.4) +
+    geom_smooth(method = "lm", se = FALSE,aes(color = income.groups , fill = income.groups ), size = 1)+
+    xlim(9, 13) + ylim(0, 10.5) +
+    theme(legend.position = "bottom")
+  
+p2
+```
+
+
+## Check group variables
+
+```{r,}
+# Code from lab9
+# use the janitor package to summarise this data in a table format:
+household %>% 
+  tabyl(Head.sex, quantiles) %>% 
+  adorn_percentages() %>% 
+  adorn_pct_formatting() %>% 
+  adorn_ns() # To show original counts
+
+p1 <- ggplot(household, aes(x= as.factor(quantiles),  y = ..prop.., group=Head.sex, fill=Head.sex)) + 
+    geom_bar(position="dodge", stat="count") +
+    labs(y = "Proportion",x = "", main = "Barplot of Members.no by Head.sex")
+
+# Check Type
+household %>% 
+  tabyl(Type, quantiles) %>% 
+  adorn_percentages() %>% 
+  adorn_pct_formatting() %>% 
+  adorn_ns() # To show original counts
+
+p2 <- ggplot(household, aes(x= as.factor(quantiles),  y = ..prop.., group=Type, fill=Type)) + 
+    geom_bar(position="dodge", stat="count") +
+    labs(y = "Proportion",x = "", main = "Barplot of Members.no by type")
+
+# Check Electricity
+household %>% 
+  tabyl(Elec., quantiles) %>% 
+  adorn_percentages() %>% 
+  adorn_pct_formatting() %>% 
+  adorn_ns() # To show original counts
+household$Elec. <- as.factor(household$Elec.)
+p3 <- ggplot(household, aes(x= as.factor(quantiles),  y = ..prop.., 
+                            group=Elec., fill=Elec.)) + 
+    geom_bar(position="dodge", stat="count") +
+    labs(y = "Proportion",x = "", main = "Barplot of Members.no by electricity") +
+    ylim(0, 0.6)
+p3
+
+library(gridExtra)
+p1 <- p1 + theme(legend.position = "bottom")
+p2 <- p2 + theme(legend.position = "bottom")
+p3 <- p3 + theme(legend.position = "bottom")
+grid.arrange(p1, p2, p3,  ncol = 2)
 
 ```
-# Explain of Nan of log form
 
-There is an abs. with house age ZERO, result in an INF in house.age.log
+
+Short conclusion:
+
+- For *Head.sex*, a large proportion in small households are female leaders (67.8%), while in more-member households are witnessed with more male heads (53.7%).
+
+- For *Electricity*, the difference is not obvious with fewer-member households may have a percentage of 50.6% having access to electricity, while 49.0% for larger household. However, the two groups still have different electricity means.
+
+- For *Type*, there are some interesting findings.
 
 ```{r, fig.width = 9, fig.height = 6, fig.align = "center", fig.pos = "H"}
 
-# We ignore that Inf data
-household <- household[!is.infinite(household$House.age.log),]
-nrow(household) #1884
+type1 <- ggplot(data = household, aes(x = Type, y = Members.no, fill = Type)) +
+    geom_boxplot() +
+    labs(x = "Type", y = "Members.no") + 
+    theme(legend.position = "none", title = element_text(size = 16))
 
-# Get the correlation pattern
-ggpairs(household[,c("Income.log", "Food.exp.log", "Head.age", "House.age.log")]) 
-```
-```
-Short conclusion:
+household <- household %>% 
+  mutate(Type.single = ifelse(Type=="Single Family", "Yes", "No"))
+type2 <- ggplot(data = household, aes(x = Type.single, y = Members.no, fill = Type.single)) +
+    geom_boxplot() +
+    labs(x = "Type single", y = "Members.no") + 
+    theme(legend.position = "none", title = element_text(size = 16))
 
-Among numerical variabls, *Income*, *Food.exp*, *Head.age*, *House.age* may be better.
-Moreover, *Income* and*Food.exp* are highly correlated. Pay attention.
+grid.arrange(type1, type2,ncol = 2)
+
+```
 
 
 
@@ -348,7 +444,7 @@ plot_model(model_sex2, show.values = TRUE, transform = NULL,
 ```
 
 #Cut 5
-```{r,echo = FALSE}
+```{r, echo = FALSE}
 data_cut <- read.csv("C:/Users/Seismic/Downloads/dataset3.csv")
 data_cut <- data_cut %>%
     mutate(Num5 = data$Total.Number.of.Family.members)
@@ -364,8 +460,100 @@ round(odds.ratio(model_type),2)
 
 ```
 
-#Poisson model
-```{r}
+Delete income
+
+```{r,}
+data1 <- read.csv("dataset3.csv")
+data1[,"Total.Number.of.Family.members"] <- ifelse(data1[,"Total.Number.of.Family.members"] > median(data1[,"Total.Number.of.Family.members"]),1,0)
+data1$Total.Number.of.Family.members<-as.factor(data1$Total.Number.of.Family.members)
+
+data1 <- data1 %>% 
+  mutate(Type.single = ifelse(Type.of.Household =="Single Family", "Yes", "No"))
+
+model3 <-  glm(Total.Number.of.Family.members ~ 
+                   log(Total.Food.Expenditure)+
+                   Household.Head.Age+
+                   House.Age+
+                   Electricity+
+                   Household.Head.Sex+
+                   Type.single ,family = binomial(link = "logit"),data = data1)
+summary(model3)
+```
+```{r, }
+# -------------------------------
+model.full <- glm(Total.Number.of.Family.members ~ 
+                   log(Total.Food.Expenditure)+
+                   Household.Head.Age+
+                   House.Age+
+                   Electricity+
+                   Household.Head.Sex+
+                   Type.single ,family = binomial(link = "logit"),data = data1)
+# --------------drop1------------------
+drop1(model.full, test='Chisq') ## only for full model
+# --------------lrtest-----------------
+# lrtest(model.full, model.reduced)
+## Interpretation - Pr(>Chisq) for reduced model is little, thus not accept the reduced model
 
 ```
 
+# The comparisons
+## Model4 + interactions
+
+```{r,}
+data1 <- data1 %>% 
+  mutate(Head.Age.mean = Household.Head.Age - mean(Household.Head.Age))
+
+
+ggplot(data =  data1, aes(x = as.factor(Total.Number.of.Family.members), y = Head.Age.mean, 
+                          fill = as.factor(Total.Number.of.Family.members))) +
+                geom_boxplot() +
+                labs(x = "", y = "Head.Age.mean")+ 
+                theme(legend.position = "none", title = element_text(size = 16)) +
+                labs(title = "Members number by Head.Age.mean")
+
+model4 <-  glm(Total.Number.of.Family.members ~ 
+                   log(Total.Food.Expenditure) +
+                   Head.Age.mean +
+                   House.Age +
+                   Electricity+
+                   Household.Head.Sex +
+                   Type.single ,family = binomial(link = "logit"),data = data1)
+summary(model4)
+```
+
+# Poisson model
+
+```{r,}
+data1 <- read.csv("dataset3.csv")
+data1 <- data1 %>% 
+  mutate(Type.single = ifelse(Type.of.Household =="Single Family", "Yes", "No"))
+
+poisson.model <- glm(Total.Number.of.Family.members ~ 
+                       log(Total.Food.Expenditure) + 
+                       Household.Head.Age + 
+                       House.Age + 
+                       Electricity + 
+                       Household.Head.Sex + 
+                       Type.single , family = poisson, data = data1)
+summary(poisson.model)
+```
+## Residuals of Poisson【APM course】
+```{r,fig.width = 9, fig.height = 9, fig.align = "center", fig.pos = "H"}
+
+# Calculate the dispersion parameter:
+pearson <- residuals(poisson.model, type = "pearson")
+sum(pearson**2) / poisson.model$df.residual
+## [1] 0.7135002
+
+# Residual plots vs. predicted (using standardised residuals):
+#------------------------------------------------
+# Make use of rstandard()
+# Get Std. residuals
+stand.resid <- rstandard(model = poisson.model, type = "pearson")
+fitted.values <-  predict(poisson.model, type = "response")# "response" = y, default = log(y)
+
+plot(x = fitted.values, y = stand.resid, 
+     xlab = "fitted.values", ylab = "Standardized Pearson residuals", ylim = c(-5,5))
+abline(h = c(-3, -2, 0, 2, 3), lty = "dotted", col = "red")
+
+```
