--- a/Group_03_Analysis_fulltext.Rmd
+++ b/Group_03_Analysis_fulltext.Rmd
@@ -55,9 +55,11 @@ library(SDMTools)
 
 Family Income and Expenditure Survey (FIES) is a survey which is undertaken every three years in the Philippines. It is aimed at providing data on family income and expenditure.  In this survey, household unit is composed of family units. Sharma (2013) regarded the family as a functional unit of society. It functions in an economic, social or emotional sense. Hence, the structure of it and those influential factors behind it are of much importance. 
 
-This analysis explore the relationships between the number of household members and the other properties of household structure in **Northern Mindanao**, Philippines. We analyse all the 10 variables, modify some variables (such as dividing into groups and log-transformation) and then select our variables to establish a logit model.
+This analysis explore the relationships between the number of household members and the other properties of household structure in **Northern Mindanao**, Philippines. We analyse all the 10 variables, modify some variables (such as dividing/combining groups and log-transformation) and then select significant variables to establish a logit model.
 
-**haven't finished...**
+According to several analyses, we find the best model to fit the dataset. The number of members in household is divided into 2 groups: 1-4 members and more than 5 members. 2 variables are excluded: household area and the number of bedrooms. Then there are 7 variables: annual household income, Annual expenditure by the household on food, head of the households sex, head of the households age, relationship between the group of people living in the house, age of the building, and whether the house have electricity are the final variables included. They influence the number of members living in a household.
+
+Among these 7 variables, food expenditure has the strongest influence and total income has the second strongest influence. By comparison, the house age and head age only influence the outcomes slightly. The other 3 indicator variables are contribute moderately. If household has properties: non-electricity, male head, and more than one family, then there is a higher probability that the house includes more than 5 members in a household.
 
 
 # Exploratory analysis
@@ -97,8 +99,8 @@ household <- data[,-2]
 colnames(household) <- c("Income", "Food.exp", "Head.sex", "Head.age", "Type", "Members.no", "Area", "House.age", "Bedrooms.no", "Elec.")
 
 # Check is there any NA in data
-cat("\n Check is there any NA in data \n")
-apply(household, 2, function(x) any(is.na(x))) # No NAs in data
+#cat("\n Check is there any NA in data \n")
+#apply(household, 2, function(x) any(is.na(x))) # No NAs in data
 
 # Move our response variable to the first
 household <- household %>%
@@ -469,7 +471,7 @@ From the boxplots of two group criteria of Type, we notice that even though we m
 Since our target variable has been divided into two groups, we choose the logit regression model:
 
 $$
-\log(\frac{p_i}{1-p_i}) = \alpha + \beta_1 \log(x_{1i}) +\beta_2 log(x_{2i}) +\beta_3 x_{3i} + \beta_4 x_{4i} + \beta_5 x_{5i} + \beta_6 x_{6i} + \epsilon_i,
+\log(\frac{p_i}{1-p_i}) = \alpha + \beta_1 \log(x_{1i}) +\beta_2 log(x_{2i}) +\beta_3 x_{3i} + \beta_4 x_{4i} + \beta_5 \mbox{I}(x_{5i}) + \beta_6 \mbox{I}(x_{6i}) + \beta_7 \mbox{I}(x_{7i}) + \epsilon_i,
 $$
 where 
 
@@ -487,11 +489,40 @@ where
 
 - $x_6$ denotes the **Head of the households sex**;
 
+- $x_7$ denotes the **Household type**
+
 - $\alpha$ denotes the **intercept** of the regression line;
 
 - $\beta_i$ are the **coefficients** for the explanatory variables $x_i$; 
 
 - $\epsilon_i$ denotes the $i^{th}$ random error component,which are normally distributed with mean zero and variance $\sigma^2$.
+
+- $\mbox{I}(x)$ is the indicator function that:
+$$
+\mathbb{I}(x_{5i}) = \left\{
+      \begin{array}{ll}
+      1 ~~~ \mbox{The house have electricity},\\
+      0 ~~~ \mbox{otherwise}.\\
+      \end{array}
+      \right.
+$$
+$$
+\mathbb{I}(x_{6i}) = \left\{
+      \begin{array}{ll}
+      1 ~~~ \mbox{The sex of households Head is male},\\
+      0 ~~~ \mbox{otherwise}.\\
+      \end{array}
+      \right.
+$$
+and
+$$
+\mathbb{I}(x_{7i}) = \left\{
+      \begin{array}{ll}
+      1 ~~~ \mbox{The household type is single family},\\
+      0 ~~~ \mbox{otherwise}.\\
+      \end{array}
+      \right.
+$$
 
 Therefore, our next step is to estimate the parameters and outcomes are shown as follow:
 
@@ -534,8 +565,7 @@ logreg <- LogRegR2(model2)
 
 As the Table \ref{tab:summary2} represents, all the parameters of model are statistically significant with p-values that less than 0.05 and confidence intervals that not contain zero. Besides, we obtain other statistics: the AIC value is `r round(summary2$aic, 4)`, null deviance is `r round(summary2$null.deviance, 4)`, residual deviance is `r round(summary2$deviance, 4)`, and McFadden's R^2 is `r round(logreg$RL2, 4)`.
 
-**haven't finished...**
-Therefore, from the Table \ref{tab:summary2} and Table \ref{tab:ci}, we can say that the total food expenditure is strongest variable that effect the number of household members.
+Therefore, from the Table \ref{tab:summary2} and Table \ref{tab:ci}, we can say that the total food expenditure is strongest variable that effect the number of household members positively, while the total income  is also the strong effects that are negatively, considering the change of order of magnitude between log-transformed data and raw data. The next two variables with slightly effects on the household members are head age and house age and both of their coefficients are negative. The last three variables effect more directly. If the household does not have electricity, the head of household is male, and there are more than one family living in the house, the number of members tends to be more than that has contrary features.
 
 In addition, we do the exponential process on the two log-transformed variables and then the new confidence intervals of raw data are:
 ```{r}
@@ -570,23 +600,13 @@ Based on the Figure \ref{fig:odds}, we find that for each unit decrease in the f
 
 
 Thirdly, we plot the probability trends between more family members and all other explanatory variables and all of these plot are shown in the Figure \ref{fig:prob}.
-```{r, fig.width = 8, fig.height = 3, fig.align = "center", fig.cap = "\\label{fig:prob1}The probability of more members (Part 1)", fig.pos = "H"}
+```{r, fig.width = 8, fig.height = 9, fig.align = "center", fig.cap = "\\label{fig:prob1}The probability of more members (Part 1)", fig.pos = "H"}
 #probability variables pro plot
 
 p1 <- plot_model(model2, type = "pred", terms = "Total.Household.Income", title = "",
            axis.title = c("(a) Total.Household.Income", "Probability of more members"))
 p2 <- plot_model(model2, type = "pred", terms = "Total.Food.Expenditure", title = "",
            axis.title = c("(b) Total.Food.Expenditure", "Probability of more members"))
-
-
-grid.arrange(p1, p2, ncol = 2)
-
-```
-From the plot (a) in Figure \ref{fig:prob1}, the probability of members declines with the increase of household income. At first, it declines steeply and gradually become steady, while in contrast, from the plot (b), which is the plot of food expenditure, we witness that the line increases dramatically before 500,000 peso and then become flat. In plot (c) and (d) in Figure \ref{fig:prob2}, the slope of head of household age and house age decrease with steady paces. Besides, plot (e), (f) and (g) are plot of three categorical variables. Finally, we can conclude that more expenditure, houses with no electricity, male head of household and single type of relationship will lead to more family members. 
-
-
-```{r, fig.width = 8, fig.height = 9, fig.align = "center", fig.cap = "\\label{fig:prob2}The probability of more members (Part 2)", fig.pos = "H"}
-
 p3 <- plot_model(model2, type = "pred", terms = "Household.Head.Age", title = "",
            axis.title = c("(c) Household.Head.Age", "Probability of more members"))
 p4 <- plot_model(model2, type = "pred", terms = "House.Age", title = "",
@@ -595,10 +615,18 @@ p5 <- plot_model(model2, type = "pred", terms = "Electricity", title = "",
            axis.title = c("(e) Electricity", "Probability of more members"))
 p6 <- plot_model(model2, type = "pred", terms = "Household.Head.Sex", title = "",
            axis.title = c("(f) Household.Head.Sex", "Probability of more members"))
+
+grid.arrange(p1, p2, p3, p4, p5, p6, ncol = 2)
+```
+From the plot (a) in Figure \ref{fig:prob1}, the probability of members declines with the increase of household income. At first, it declines steeply and gradually become steady, while in contrast, from the plot (b), which is the plot of food expenditure, we witness that the line increases dramatically before 500,000 peso and then become flat. In plot (c) and (d), the slope of head of household age and house age decrease with steady paces. Besides, plot (e), (f) and (g) are plot of three categorical variables. Finally, we can conclude that more expenditure, houses with no electricity, male head of household and single type of relationship will lead to more family members. 
+
+
+```{r, fig.width = 4, fig.height = 3, fig.align = "center", fig.cap = "\\label{fig:prob2}The probability of more members (Part 2)", fig.pos = "H"}
+
 p7 <- plot_model(model2, type = "pred", terms = "Type.single", title = "",
            axis.title = c("(g) Type.single", "Probability of more members"))
 
-grid.arrange(p3, p4, p5, p6, p7, ncol = 2)
+grid.arrange(p3, ncol = 1)
 ```
 
 Finally, we plot the ROC curve (receiver operating characteristic curve) and obtain the AUC value:
@@ -632,13 +660,13 @@ In section 2, we find that there are two variables that do not show significant 
 The model of 9 variables is:
 
 $$
-\log(\frac{p_i}{1-p_i}) = \alpha + \beta_1 \log(x_{1i}) +\beta_2 log(x_{2i}) +\beta_3 x_{3i} + \beta_4 x_{4i} + \beta_5 x_{5i} + \beta_6 x_{6i} + \beta_7 \log(x_{7i}) + \beta_8 x_{8i} + \epsilon_i,
+\log(\frac{p_i}{1-p_i}) = \alpha + \beta_1 \log(x_{1i}) +\beta_2 log(x_{2i}) +\beta_3 x_{3i} + \beta_4 x_{4i} + \beta_5 \mbox{I}(x_{5i}) + \beta_6 \mbox{I}(x_{6i}) + \beta_7 \mbox{I}(x_{7i}) + \beta_8 \log(x_{8i}) + \beta_9 x_{9i} + \epsilon_i,
 $$
 where 
 
-- $x_7$ denotes the **Floor area of the house (in $m^2$)**;
+- $x_8$ denotes the **Floor area of the house (in $m^2$)**;
 
-- $x_8$ denotes the **Number of bedrooms in the house**;
+- $x_9$ denotes the **Number of bedrooms in the house**;
 
 and the other variables and parameters are same as the model of 7 variable.
 
@@ -751,9 +779,7 @@ kable(class.compare2, caption = "\\label{tab:class2}Statistics of different grou
 ```
 
 ### Poisson or logit
-In this analysis, we choose the logit model. Now we also check that whether other kinds of GLMs are suitable for the dataset.
 
-Take the poisson model as a example,
 ```{r, }
 data2 <- read.csv("dataset3.csv")
 data2 <- data2 %>% 
@@ -773,7 +799,9 @@ kable(summary5$coefficients, caption = "\\label{tab:summary5}Parameter estimates
   kable_styling(latex_options = 'HOLD_position')
 
 ```
-All the p values of these variables shows that they are significant. Therefore, we next check its residuals and assumptions:
+In this analysis, we choose the logit model. Now we also check that whether other kinds of GLMs are suitable for the dataset.
+
+Take the poisson model as a example, all the p values of these variables shows that they are significant. Therefore, we next check its residuals and assumptions:
 
 ```{r,fig.width = 5, fig.height = 5, fig.align = "center", fig.cap = "\\label{fig:poires}", fig.pos = "H"}
 
@@ -799,9 +827,25 @@ Obviously, there is not a random residual pattern in Poisson model as the Figure
 
 
 # Conclusion
+According to several analyses, we find the best model to fit the dataset. In summary, there are 7 variables that could influence the number of people living in a household:
 
-**haven't finished...**
+- **Total.Household.Income** – Annual household income (in Philippine peso)
 
+- **Total.Food.Expenditure** – Annual expenditure by the household on food (in Philippine peso)
+
+- **Household.Head.Sex** – Head of the households sex
+
+- **Household.Head.Age** – Head of the households age (in years)
+
+- **Type.of.Household** – Relationship between the group of people living in the house
+
+- **House.Age** – Age of the building (in years)
+
+- **Electricity** – Does the house have electricity? (1 = Yes, 0 = No)
+
+The household area and the number of bedrooms does not have influence. 
+
+The target variable is divided into 2 groups: 1-4 members in a household and more than 5 members in a household. In the other 7 variables, influence of total food expenditure is the most strongest variables and total income is the second strongest one. In contrast, the house age and head age only have slight influence. The other 3 variables are indicators that the household will have more probability including more than 5 members in a household when the household has following properties: without electricity, male head, and more than one family living in the house.
 
 In the future, we can improve the model performance by adding more meaningful variables and reducing some variables like house age and household head age. 
 
