--- a/Group_03_Analysis_fulltext.Rmd
+++ b/Group_03_Analysis_fulltext.Rmd
@@ -648,7 +648,7 @@ roc.trump
 ```{r}
 data1$predFull <- predict(model2,type="response",na.action=na.exclude)
 confM <- confusion.matrix(data1$Total.Number.of.Family.members,data1$predFull,threshold = 0.51)
-percent(round(sum(diag(confM))/sum(confM),2),0.01)
+accuracy <- percent(round(sum(diag(confM))/sum(confM),2),0.01)
 ```
 From the Figure \ref{fig:roc}, the AUC value is 0.812, which is larger than 0.5. So, it is better than the predicting randomly. We can adjust the threshold to calculate the accuracy and when we set the threshold as 0.51, we can see the accuracy is `r accuracy`. 
 
